--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>Welcome to GameHub</header>
+    <h1>Welcome to GameHub</h1>
     <h1>The universe of games!</h1>
 </body>
 </html>
