--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Welcome to GameHub</h1>
-    <h1>The universe of games!</h1>
+    <p>The universe of games!</p>
 </body>
 </html>
