--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
     <title>GameHub</title>
+    <meta charset="utf-8"  />
     <link rel="stylesheet" href="GameHub.css">
     <style></style>
 </head>
@@ -34,10 +35,9 @@
     <div class="news">News
         <img src="halo22.jpeg">
         <a href="#" class="btn btn-1">Add to cart</a>
-   
-    
     </div>
-    <div class="quicklinks">quicklinks</div>
+    <div class="quicklinks">quicklinks
+        <img src="quicklinks.png"></div>
     <div class="preorder">PRE-ORDER</div>
     <div class="usedgames">USED GAMES</div>
     <div class="contact">Contact</div>
