Creating the different pages, and making the homepage more responsive.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <nav>
         <ul>
             <li><a href="">Home</a> </a></li>
-            <li><a href="">About</a> </a></li>
             <li><a href="">Games</a> </a></li>
+            <li><a href="">Checkout</a> </a></li>
             <li><a href="">Contact</a> </a></li>
+            <li><a href="">Search</a> </a></li>
             <li><a href="">Profile</a> </a></li>
-            <li><a href="">Learn</a> </a></li>
         </ul>
     </nav>
     
@@ -30,7 +30,7 @@
         <h1>
         THE UNIVERSE OF GAMES
     </h1>
-        <img src="Logo.png">    
+    <img src="Logo.png">    
     </div>
     <div class="news">News
         <img src="halo22.jpeg">
