title on every page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="news">News
         <img src="halo22.jpeg">
-        <a href="#" class="btn btn-1">Add to cart</a>
+        <a href="checkout.html" class="btn btn-1">Add to cart</a>
     </div>
     <div class="quicklinks">quicklinks
         <img src="quicklinks.png"></div>
